// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DatasetItemsList correctly with datasetItems 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-plus fdk-color-white mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
  </div>
  <Component
    catalogId="123"
    defaultEmptyListText={null}
    itemTitleField={
      Array [
        "title",
      ]
    }
    items={null}
    onSortField={[Function]}
    prefixPath="/catalogs/123/datasets"
    sortField=""
    sortType=""
  />
</div>
`;

exports[
  `should render DatasetItemsList correctly with missing datasetItems 1`
] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-plus fdk-color-white mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
  </div>
  <Component
    catalogId="123"
    defaultEmptyListText={null}
    itemTitleField={
      Array [
        "title",
      ]
    }
    items={null}
    onSortField={[Function]}
    prefixPath="/catalogs/123/datasets"
    sortField=""
    sortType=""
  />
</div>
`;

exports[`should render DatasetItemsList correctly with missing items 1`] = `
<div>
  <div
    className="d-flex mb-3"
  >
    <button
      className="fdk-button fdk-button-cta"
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-plus fdk-color-white mr-2"
      />
      Legg til ny datasettbeskrivelse
    </button>
  </div>
  <Component
    catalogId="123"
    defaultEmptyListText={null}
    itemTitleField={
      Array [
        "title",
      ]
    }
    items={null}
    onSortField={[Function]}
    prefixPath="/catalogs/123/datasets"
    sortField=""
    sortType=""
  />
</div>
`;
